--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 	    <version>4.12</version>
 	    <scope>test</scope>
 	</dependency>
+	<dependency>
+    	<groupId>com.github.javafaker</groupId>
+    	<artifactId>javafaker</artifactId>
+    	<version>0.15</version>
+	</dependency>
  </dependencies>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
