--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,19 @@
 	<!-- https://mvnrepository.com/artifact/junit/junit -->
 	<dependency>
 		<groupId>junit</groupId>
-	    	<artifactId>junit</artifactId>
+	    <artifactId>junit</artifactId>
 	   	<version>4.12</version>
 	   	<scope>test</scope>
 	</dependency>
 	<dependency>
-    		<groupId>com.github.javafaker</groupId>
-    		<artifactId>javafaker</artifactId>
-    		<version>0.15</version>
+    	<groupId>com.github.javafaker</groupId>
+    	<artifactId>javafaker</artifactId>
+    	<version>0.15</version>
+	</dependency>
+	<dependency>
+    	<groupId>org.apache.commons</groupId>
+		<artifactId>commons-csv</artifactId>
+		<version>1.5</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 	<dependency>
